--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsdom": "^22.1.0",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
+    "node-json-db": "^2.2.0",
     "openai": "^3.2.1",
     "prettier": "^2.3.0"
   },
