--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "archiver": "^5.3.1",
+    "canvas": "^2.11.2",
     "dotenv": "^16.1.4",
     "epub": "^1.2.1",
     "gpt-tokenizer": "^2.1.1",
@@ -13,9 +14,11 @@
     "jsdom": "^22.1.0",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
+    "mime-types": "^2.1.35",
     "node-json-db": "^2.2.0",
     "openai": "^3.2.1",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "prompt": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^7.27.0",
