--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "private": true,
   "dependencies": {
     "archiver": "^5.3.1",
+    "better-sqlite3": "^8.5.1",
     "canvas": "^2.11.2",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.1.4",
     "epub": "^1.2.1",
     "gpt-tokenizer": "^2.1.1",
+    "inquirer": "^9.2.10",
     "iso-639-1": "^2.1.15",
     "jsdom": "^22.1.0",
+    "jsonrepair": "^3.2.0",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
     "mime-types": "^2.1.35",
