--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "decimal.js": "^10.4.3",
     "dotenv": "^16.1.4",
     "epub": "^1.2.1",
+    "franc": "^6.1.0",
     "gpt-tokenizer": "^2.1.1",
     "inquirer": "^9.2.10",
     "iso-639-1": "^2.1.15",
     "jsdom": "^22.1.0",
     "jsonrepair": "^3.2.0",
+    "langdetect": "^0.2.1",
+    "langid": "^0.0.1",
+    "languagedetect": "^2.0.0",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
     "mime-types": "^2.1.35",
