--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "archiver": "^5.3.1",
     "better-sqlite3": "^8.5.1",
     "canvas": "^2.11.2",
+    "cld": "^2.9.0",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.1.4",
     "epub": "^1.2.1",
