--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "openai": "^3.2.1",
     "prettier": "^2.3.0",
     "prompt": "^1.3.0",
-    "simply-beautiful": "^1.0.1"
+    "simply-beautiful": "^1.0.1",
+    "youtube-captions-scraper": "^2.0.3",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "eslint": "^7.27.0",
