--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.1",
     "archiver": "^5.3.1",
+    "axios": "^1.7.9",
     "better-sqlite3": "^8.5.1",
     "canvas": "^2.11.2",
     "decimal.js": "^10.4.3",
