--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "openai": "^3.2.1",
     "prettier": "^2.3.0",
     "prompt": "^1.3.0",
+    "sharp": "^0.33.5",
     "simply-beautiful": "^1.0.1",
     "youtube-captions-scraper": "^2.0.3",
     "ytdl-core": "^4.11.5"
